--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,23 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+<plugin>
+  <groupId>com.spotify</groupId>
+  <artifactId>docker-maven-plugin</artifactId>
+  <version>0.4.13</version>
+  <configuration>
+    <imageName>gary/springboot-helloworld:0.0.2</imageName>
+    <dockerDirectory>${project.basedir}/</dockerDirectory>
+    <resources>
+      <resource>
+        <targetPath>/</targetPath>
+        <directory>${project.build.directory}</directory>
+        <include>${project.build.finalName}.jar</include>
+      </resource>
+    </resources>
+  </configuration>
+</plugin>
 		</plugins>
 	</build>
 
