Add  docker scripts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,8 @@ test:
   script:
     - mvn $MAVEN_CLI_OPTS test
 
-package:
-  stage: package
+deploy:
+  stage: deploy
   script:
     - mvn $MAVEN_CLI_OPTS package docker:build
 
