--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build:
   stage: build
   script:
     - mvn $MAVEN_CLI_OPTS package
-    - sudo docker build -t hello-image target/
+    - sudo docker build -t hello-image .
 
 test:
   stage: test
