--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-image: maven:latest
 
 variables:
   MAVEN_CLI_OPTS: "--batch-mode"
@@ -21,4 +20,29 @@ test:
     - mvn $MAVEN_CLI_OPTS test
 
 
+deployToIntegration:
+  only:
+    refs:
+      - develop
+  stage: deploy
+  script:
+    - ssh root@k8s kubectl get pod -n kube-system
 
+deployToPre:
+  only:
+    - tags
+    refs:
+      - master
+  stage: deploy
+  script:
+    - ssh root@k8s kubectl get pod
+
+deployToProduct:
+  only:
+    - tags
+    refs:
+      - master
+  stage: deploy
+  when: manual
+  script:
+    - ssh root@k8s kubectl get pod
