--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,10 +10,20 @@ cache:
 
 build:
   stage: build
+  only:
+    refs:
+      - develop
   script:
     - mvn $MAVEN_CLI_OPTS package
-    - sudo docker build -t uhub.ucloud.cn/gary/hello-image .
+    - sudo docker build -t uhub.ucloud.cn/gary/hello-image:SNAP-$CI_JOB_ID .
 
+buildToDeply:
+  only:
+    - tags
+    - master
+  script:
+    - mvn $MAVEN_CLI_OPTS package
+    - sudo docker build -t uhub.ucloud.cn/gary/hello-image:$CI_COMMIT_TAG .
 test:
   stage: test
   script:
@@ -31,8 +41,7 @@ deployToIntegration:
 deployToPre:
   only:
     - tags
-    refs:
-      - master
+    - master
   stage: deploy
   script:
     - ssh root@k8s kubectl get pod
@@ -40,8 +49,7 @@ deployToPre:
 deployToProduct:
   only:
     - tags
-    refs:
-      - master
+    - master
   stage: deploy
   when: manual
   script:
