--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ buildToIntegraion:
       - develop
   script:
     - mvn $MAVEN_CLI_OPTS package
-    - sudo docker build -t uhub.ucloud.cn/gary/hello-image:SNAP-$CI_JOB_ID .
+    - sudo docker build -t uhub.ucloud.cn/gary/hello-image:SNAP-$CI_PIPELINE_ID .
 
 
 buildToDeploy:
@@ -38,10 +38,10 @@ deployToIntegration:
       - develop
   stage: deploy
   script:
-    - sudo docker push uhub.ucloud.cn/gary/hello-image:SNAP-$CI_JOB_ID
-    - cat  yaml/hello_world_template.yaml |sed 's/<IMAGE_TAG>/SNAP-$CI_JOB_ID/'  > /tmp/hello_world_SNAP-$CI_JOB_ID.yaml
-    - scp /tmp/hello_world_SNAP-$CI_JOB_ID.yaml root@k8s:/tmp/hello_world_SNAP-$CI_JOB_ID.yaml
-    - ssh root@k8s kubectl apply -f /tmp/hello_world_SNAP-$CI_JOB_ID.yaml
+    - sudo docker push uhub.ucloud.cn/gary/hello-image:SNAP-$CI_PIPELINE_ID
+    - cat  yaml/hello_world_template.yaml |sed 's/<IMAGE_TAG>/SNAP-$CI_PIPELINE_ID/'  > /tmp/hello_world_SNAP-$CI_PIPELINE_ID.yaml
+    - scp /tmp/hello_world_SNAP-$CI_JOB_ID.yaml root@k8s:/tmp/hello_world_SNAP-$CI_PIPELINE_ID.yaml
+    - ssh root@k8s kubectl apply -f /tmp/hello_world_SNAP-$CI_PIPELINE_ID.yaml
 
 deployToPre:
   only:
