--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ deployToIntegration:
   stage: deploy
   script:
     - sudo docker push uhub.ucloud.cn/gary/hello-image:SNAP-$CI_PIPELINE_ID
-    - cat  yaml/hello_world_template.yaml |sed 's/<IMAGE_TAG>/SNAP-$CI_PIPELINE_ID/'  > /tmp/hello_world_SNAP-$CI_PIPELINE_ID.yaml
+    - cat  yaml/hello_world_template.yaml |sed "s/<IMAGE_TAG>/SNAP-$CI_PIPELINE_ID/"  > /tmp/hello_world_SNAP-$CI_PIPELINE_ID.yaml
     - scp /tmp/hello_world_SNAP-$CI_PIPELINE_ID.yaml root@k8s:/tmp/hello_world_SNAP-$CI_PIPELINE_ID.yaml
     - ssh root@k8s kubectl apply -f /tmp/hello_world_SNAP-$CI_PIPELINE_ID.yaml
 
@@ -48,7 +48,7 @@ deployToPre:
     - tags
   stage: deploy
   script:
-    - cat  yaml/hello_world_template.yaml |sed 's/<IMAGE_TAG>/SNAP-$CI_COMMIT_TAG/'  > /tmp/hello_world_$CI_COMMIT_TAG.yaml
+    - cat  yaml/hello_world_template.yaml |sed "s/<IMAGE_TAG>/SNAP-$CI_COMMIT_TAG/"  > /tmp/hello_world_$CI_COMMIT_TAG.yaml
     - scp /tmp/hello_world_$CI_COMMIT_TAG.yaml root@k8s:/tmp/hello_world_$CI_COMMIT_TAG.yaml
     - ssh root@k8s kubectl apply -f /tmp/hello_world_$CI_COMMIT_TAG.yaml -n preproduction
 
@@ -58,6 +58,6 @@ deployToProduct:
   stage: deploy
   when: manual
   script:
-    - cat  yaml/hello_world_template.yaml |sed 's/<IMAGE_TAG>/SNAP-$CI_COMMIT_TAG/'  > /tmp/hello_world_$CI_COMMIT_TAG.yaml
+    - cat  yaml/hello_world_template.yaml |sed "s/<IMAGE_TAG>/SNAP-$CI_COMMIT_TAG/"  > /tmp/hello_world_$CI_COMMIT_TAG.yaml
     - scp /tmp/hello_world_$CI_COMMIT_TAG.yaml root@k8s:/tmp/hello_world_$CI_COMMIT_TAG.yaml
     - ssh root@k8s kubectl apply -f /tmp/hello_world_$CI_COMMIT_TAG.yaml -n production
