--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,6 @@ deployToProduct:
   stage: deploy
   when: manual
   script:
-    - cat  yaml/hello_world_template.yaml |sed "s/<IMAGE_TAG>/-$CI_COMMIT_TAG/"  > /tmp/hello_world_$CI_COMMIT_TAG.yaml
+    - cat  yaml/hello_world_template.yaml |sed "s/<IMAGE_TAG>/$CI_COMMIT_TAG/"  > /tmp/hello_world_$CI_COMMIT_TAG.yaml
     - scp /tmp/hello_world_$CI_COMMIT_TAG.yaml root@k8s:/tmp/hello_world_$CI_COMMIT_TAG.yaml
     - ssh root@k8s kubectl apply -f /tmp/hello_world_$CI_COMMIT_TAG.yaml -n production
